Dragging a URL to desktop fails with long page title (252 or more characters) since Firefox 108
Categories
(Core :: Widget: Win32, defect, P3)
Tracking
()
People
(Reporter: soeren.hentzschel, Assigned: enndeakin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
STR:
- use Windows
- open a URL with a long page title* (see the attached test case)
- drag the URL from the address bar to the desktop
*) For me it happens with 252 or more characters.
Expected:
A shortcut is created.
Actual:
No shortcut is created, an error message appears:
"The syntax for the file name, directory name or disk label is incorrect." (freely translated, because I use Windows in German)
Since it's a regression from the security fix in bug 1746139 Firefox ESR 102.6 is affected as well.
It was reported as an issue in the Firefox support. A lot of Amazon pages have such large page titles.
| Reporter | ||
Comment 1•3 years ago
|
||
| Reporter | ||
Updated•3 years ago
|
Comment 2•3 years ago
|
||
:mkmelin, since you are the author of the regressor, bug 1746139, could you take a look? Also, could you set the severity field?
For more information, please visit auto_nag documentation.
Comment 3•3 years ago
|
||
The regressing commit is https://hg.mozilla.org/mozilla-central/rev/5984cee8a1c5
I'm not the author, just took over the bug after original author left.
Comment 4•3 years ago
|
||
Neil, I don't suppose you happen to know what's up here?
(The DnD code is in widget, so moving this over there.)
| Assignee | ||
Comment 5•3 years ago
|
||
So it looks like ValidateFilename is called but the extension (.URL) is being appended after this, so it ends up being four bytes too long. ValidateFileNameForSaving, which already handles cropping long filenames, was added in-between the two attempts to fix 1746139, so the changes in that bug aren't really needed, we should instead just remove the extra validation, (and I think that can remove the references to MAX_PATH).
| Assignee | ||
Comment 6•3 years ago
|
||
Updated•3 years ago
|
Comment 7•3 years ago
|
||
The severity field is not set for this bug.
:spohl, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•3 years ago
|
Comment 9•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 10•3 years ago
|
||
Should we uplit to beta or can it ride the 111 train? Thanks
Updated•3 years ago
|
Comment 11•3 years ago
|
||
Too late now for an uplift to beta.
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Reproducible on a 2023-01-15 Nightly build on Windows 11.
Verified as fixed on Firefox 111.0b6(build ID: 20230226190100) and Nightly 112.0a1(build ID: 20230226214053) on Windows 11 and Windows 10.
Comment 13•3 years ago
|
||
Is this something we wanted to backport to ESR102 also since the regressing patch also landed there? It would need a rebased patch if so.
| Assignee | ||
Comment 14•3 years ago
|
||
| Assignee | ||
Comment 15•3 years ago
|
||
Comment on attachment 9326138 [details]
WIP: Bug 1806730, remove the redundant filename length checking that ValidateFileNameForSaving already does, esr version
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Confusing error/silent failure occurs when dragging urls to desktop
- User impact if declined: Pages with long titles cannot be dragged to the desktop
- Fix Landed on Version: 111
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Removes unneeded code
| Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 16•3 years ago
|
||
Comment on attachment 9326138 [details]
WIP: Bug 1806730, remove the redundant filename length checking that ValidateFileNameForSaving already does, esr version
Approved for 102.10esr.
Comment 17•3 years ago
|
||
| bugherder uplift | ||
Reproducible on a 2023-01-15 Nightly build on Windows 11.
Verified as fixed on Firefox 102.10.0esr(build ID: 20230403141754) on Windows 11 and Windows 10.
Description
•