Bug 1806730, remove the redundant filename length checking that ValidateFileNameForSaving already does, r=cmartin

Differential Revision: https://phabricator.services.mozilla.com/D165477